--- a/functions/package.json
+++ b/functions/package.json
@@ -14,9 +14,11 @@
     "@google-cloud/vision": "^4.3.0",
     "firebase-admin": "^12.5.0",
     "firebase-functions": "^7.0.5",
+    "node-fetch": "^2.7.0",
     "openai": "^6.21.0"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.6.13",
     "typescript": "^5.4.5"
   }
 }
